placeholder for name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </p>
   <form id="survey-form">
     <fieldset>
-      <label for="name">Name <input id="name" type="text" required /> </label>
+      <label for="name">Name <input id="name" type="text" placeholder="Enter your name" required /> </label>
       <label for="email">Email <input id="email" type="email" required /></label>
       <label for="age">Age (optional) <input id="age" type="number" /></label>
       <label for="role">
