--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
   </p>
   <form id="survey-form">
     <fieldset>
-      <label for="name">Name <input id="name" type="text" placeholder="Enter your name" required /> </label>
-      <label for="email">Email <input id="email" type="email" required /></label>
-      <label for="age">Age (optional) <input id="age" type="number" /></label>
-      <label for="role">
+      <label for="name">Name <input id="name-label" type="text" placeholder="Enter your name" name="fname" required /> </label>
+      <label for="email">Email <input id="email" type="email" name="email" placeholder="Enter your email" required /></label>
+      <label for="age">Age (optional) <input id="number" type="number" name="age" min="13" max="120" placeholder="Age"/></label>
+      <label for="dropdown">
         Which option best describes your current role?
-        <select id="role" name="role">
-          <option value="">Select an option</option>
-          <option value="1"></option>
-          <option value="2"></option>
-          <option value="3"></option>
-          <option value="4"></option>
-          <option value="5"></option>
+        <select id="dropdown" name="dropdown">
+          <option value="">Select current role</option>
+          <option value="1">Student</option>
+          <option value="2">Full Time Job</option>
+          <option value="3">Full Time Leaner</option>
+          <option value="4">Prefer Not to Say</option>
+          <option value="5">Other</option>
         </select>
       </label>
+      </fieldset>
+      <fieldset
+      <label for="recommend">Would you recommend freeCodeCamp to a friend? <input type="radio"/></label>
     </fieldset>
     <fieldset></fieldset>
     <fieldset></fieldset>
