--- a/index.html
+++ b/index.html
@@ -14,29 +14,69 @@
   <p id="description">
     Thank you for taking the time to help us improve the platform
   </p>
-  <form id="survey-form">
-    <fieldset>
-      <label for="name">Name <input id="name-label" type="text" placeholder="Enter your name" name="fname" required /> </label>
-      <label for="email">Email <input id="email" type="email" name="email" placeholder="Enter your email" required /></label>
-      <label for="age">Age (optional) <input id="number" type="number" name="age" min="13" max="120" placeholder="Age"/></label>
-      <label for="dropdown">
-        Which option best describes your current role?
-        <select id="dropdown" name="dropdown">
-          <option value="">Select current role</option>
-          <option value="1">Student</option>
-          <option value="2">Full Time Job</option>
-          <option value="3">Full Time Leaner</option>
-          <option value="4">Prefer Not to Say</option>
-          <option value="5">Other</option>
-        </select>
-      </label>
+  <div class="questions">
+    <form id="survey-form">
+      <fieldset>
+        <label for="name">Name <input id="name-label" type="text" placeholder="Enter your name" name="fname" required />
+        </label>
+        <label for="email">Email <input id="email" type="email" name="email" placeholder="Enter your email"
+            required /></label>
+        <label for="age">Age (optional) <input id="number" type="number" name="age" min="13" max="120"
+            placeholder="Age" /></label>
+        <label for="dropdown">
+          Which option best describes your current role?
+          <select id="dropdown" name="dropdown">
+            <option value="">Select current role</option>
+            <option value="1">Student</option>
+            <option value="2">Full Time Job</option>
+            <option value="3">Full Time Leaner</option>
+            <option value="4">Prefer Not to Say</option>
+            <option value="5">Other</option>
+          </select>
+        </label>
       </fieldset>
-      <fieldset
-      <label for="recommend">Would you recommend freeCodeCamp to a friend? <input type="radio"/></label>
-    </fieldset>
-    <fieldset></fieldset>
-    <fieldset></fieldset>
-  </form>
+      <fieldset>Would you recommend freeCodeCamp to a friend?
+        <div class="updown">
+          <div class="clear"><label for="definitely">Definitely</label></div>
+          <input type="radio" id="definitely" name="recommend" value="1" />
+
+          <div class="clear"><label for="maybe">Maybe</label></div>
+          <input type="radio" id="maybe" name="recommend" value="2" />
+
+          <div class="clear"><label for="not-sure">Not sure</label></div>
+          <input type="radio" id="not-sure" name="recommend" value="3" />
+
+        </div>
+      </fieldset>
+      <fieldset>
+        <label for="dropdown2">
+          What is your favorite feature of freeCodeCamp?
+          <select id="dropdown2" name="dropdown2">
+            <option value="">Select an option</option>
+            <option value="1">Challenges</option>
+            <option value="2">Projects</option>
+            <option value="3">Community</option>
+            <option value="4">Open source</option>
+          </select><br>
+          <label for="checklist">What would you like to see improved?</label><br>
+          <input type="checkbox" id="improve1" name="improve1" value="frontend" class="inline">
+          <label for="improve1">Front-end projects</label><br>
+          <input type="checkbox" id="improve2" name="improve2" value="backend" class="inline">
+          <label for="improve2">Back-end projects</label><br>
+          <input type="checkbox" id="improve3" name="improve3" value="opensource" class="inline">
+          <label for="improve3">Open source community</label><br>
+          <input type="checkbox" id="improve4" name="improve4" value="videos" class="inline">
+          <label for="imrpove4">Videos</label><br>
+      </fieldset>
+      <fieldset>
+        <label for="comments">Any comments or suggestions?
+          <textarea id="comments" name="comments" rows="7" cols="30"
+            placeholder="Enter your comment here..."></textarea>
+        </label>
+      </fieldset>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
 </body>
 
 </html>
