--- a/index.html
+++ b/index.html
@@ -3,80 +3,63 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Survey Form</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Made by Jen</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-  <h1 id="title">freeCodeCamp Survey Form</h1>
-  <p id="description">
-    Thank you for taking the time to help us improve the platform
-  </p>
-  <div class="questions">
-    <form id="survey-form">
-      <fieldset>
-        <label for="name">Name <input id="name-label" type="text" placeholder="Enter your name" name="fname" required />
-        </label>
-        <label for="email">Email <input id="email" type="email" name="email" placeholder="Enter your email"
-            required /></label>
-        <label for="age">Age (optional) <input id="number" type="number" name="age" min="13" max="120"
-            placeholder="Age" /></label>
-        <label for="dropdown">
-          Which option best describes your current role?
-          <select id="dropdown" name="dropdown">
-            <option value="">Select current role</option>
-            <option value="1">Student</option>
-            <option value="2">Full Time Job</option>
-            <option value="3">Full Time Leaner</option>
-            <option value="4">Prefer Not to Say</option>
-            <option value="5">Other</option>
-          </select>
-        </label>
-      </fieldset>
-      <fieldset>Would you recommend freeCodeCamp to a friend?
-        <div class="updown">
-          <div class="clear"><label for="definitely">Definitely</label></div>
-          <input type="radio" id="definitely" name="recommend" value="1" />
+<body class="vhs-on">
+  <!-- TV Frame (can be styled with background-image or divs) -->
+  <div id="tv-container">
 
-          <div class="clear"><label for="maybe">Maybe</label></div>
-          <input type="radio" id="maybe" name="recommend" value="2" />
+    <!-- VHS Overlay (can be SVG filter or video) -->
+    <div id="overlay-vhs"></div>
 
-          <div class="clear"><label for="not-sure">Not sure</label></div>
-          <input type="radio" id="not-sure" name="recommend" value="3" />
+    <!-- Power and VHS Filter Buttons -->
+    <div id="controls">
+      <button id="power-btn">Power On/Off</button>
+      <button id="filter-toggle">VHS Filter On/Off</button>
+    </div>
 
+    <!-- Channel Menu (fake remote / UI nav) -->
+    <div class="channel-menu">
+      <button class="channel-btn" data-channel="1">Channel 1</button>
+      <button class="channel-btn" data-channel="2">Channel 2</button>
+      <button class="channel-btn" data-channel="3">Channel 3</button>
+      <!-- ... add up to Channel 10 -->
+    </div>
+
+    <!-- Screen Content -->
+    <div class="screen">
+      <div class="screen-content">
+        <img src="jenpic.png" alt="Portrait on VHS Tape" class="bio-image">
+        <div id="channel-1" class="channel-content active">
+
+          <h1>About Me</h1>
+          <div class="bio-content">
+            <div class="bio-text">
+              <p><strong>Hi, my name is Jen!</strong></p>
+              <p>I am a game and web developer currently studying Digital Media at UCF. I specialize in spooky projects
+                and unique web experiences! Click the icons below to connect with me and explore the channels for
+                details
+                about my projects.</p>
+              <div class="social-icons">
+                <a href="#" aria-label="LinkedIn">🔗</a>
+                <a href="#" aria-label="GitHub">💻</a>
+                <a href="#" aria-label="Email">✉️</a>
+                <a href="#" aria-label="Portfolio">📁</a>
+              </div>
+            </div>
+          </div>
         </div>
-      </fieldset>
-      <fieldset>
-        <label for="dropdown2">
-          What is your favorite feature of freeCodeCamp?
-          <select id="dropdown2" name="dropdown2">
-            <option value="">Select an option</option>
-            <option value="1">Challenges</option>
-            <option value="2">Projects</option>
-            <option value="3">Community</option>
-            <option value="4">Open source</option>
-          </select><br>
-          <label for="checklist">What would you like to see improved?</label><br>
-          <input type="checkbox" id="improve1" name="improve1" value="frontend" class="inline">
-          <label for="improve1">Front-end projects</label><br>
-          <input type="checkbox" id="improve2" name="improve2" value="backend" class="inline">
-          <label for="improve2">Back-end projects</label><br>
-          <input type="checkbox" id="improve3" name="improve3" value="opensource" class="inline">
-          <label for="improve3">Open source community</label><br>
-          <input type="checkbox" id="improve4" name="improve4" value="videos" class="inline">
-          <label for="imrpove4">Videos</label><br>
-      </fieldset>
-      <fieldset>
-        <label for="comments">Any comments or suggestions?
-          <textarea id="comments" name="comments" rows="7" cols="30"
-            placeholder="Enter your comment here..."></textarea>
-        </label>
-      </fieldset>
-      <input type="submit" value="Submit">
-    </form>
+      </div>
+      <!-- Add more channel sections as needed -->
+    </div>
   </div>
+
+  <script src="main.js"></script>
+  <script src="vhs-toggle.js"></script>
 </body>
 
 </html>
