--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="dial-pointer" id="dialPointer"></div>
         </div>
 
-        <div class="channel-display" id="channelDisplay">CH: 1</div>
+        <div class="channel-display" id="channelDisplay"></div>
 
         <div class="power-buttons">
           <button class="power-btn on-btn" id="onBtn">ON</button>
